TEST_PROGRAMS/INVALID/09/blank_package.go
package _

func main() {
    _ = 1
}
